@@ -50,6 +50,7 @@ namespace kt
 		hsplit = new QSplitter(Qt::Horizontal,vsplit);
 		
 		tabs = new KTabWidget(hsplit);
+		tabs->setMovable(true);
 		connect(tabs,SIGNAL(currentChanged(int)),this,SLOT(currentTabPageChanged(int)));
 		group_view = new GroupView(core->getGroupManager(),view_man,gui,hsplit);
 		connect(group_view,SIGNAL(openNewTab(kt::Group*)),this,SLOT(openNewView(kt::Group*)));
@@ -194,7 +195,7 @@ namespace kt
 	
 	void TorrentActivity::saveState(KSharedConfigPtr cfg)
 	{
-		view_man->saveState(cfg);
+		view_man->saveState(cfg,tabs);
 		group_view->saveState(cfg);
 		qm->saveState(cfg);
 		tool_views->saveState(cfg,"TorrentActivityBottomTabBar");
