@@ -9,6 +9,7 @@ Changes in 4.0beta2:
 - Improve handling of incomplete handshakes (218875)
 - When switching back from fullscreen video make sure the tab shown is the video tab
 - Replace KMultiTabBar by QToolBar, because it handles not enough space better (214524)
+- Make tab moving possible in TorrentActivity and SearchActivity (215053)
 
 Changes in 4.0beta1:
 - Make adding multiple trackers at once possible (213194) 
